--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <form>
-        <input type="text" id="name" placeholder="Enter Your First Name"><br>
-        <input type="text" id="lname" placeholder="Enter Your Last Name"><br>
-        <input type="email" id="email" placeholder="Enter Your Email Address"><br>
-        <input type="number" id="contact" placeholder="Enter Your Contact number"><br><br>
-        <button id="formSubmit">Submit</button>
+        <input type="text" id="firstname" placeholder="Enter Your First Name"><br>
+        <input type="text" id="lastname" placeholder="Enter Your Last Name"><br>
+        <input type="email" id="useremail" placeholder="Enter Your Email Address"><br>
+        <input type="number" id="userno" placeholder="Enter Your Contact number"><br><br>
+        <button type="button" id="formSubmit">Submit</button>
     </form>
 </body>
 <script src="app.js" type="module"></script>
